Add upload file button.

--- a/examples/theme.html
+++ b/examples/theme.html
@@ -102,6 +102,23 @@
         <button type="button" class="btn btn-xs btn-link">Link</button>
     </p>
 
+    <div class="page-header">
+        <h1>Upload button</h1>
+    </div>
+    <div class="row">
+        <div class="col-md-6">
+            <div class="input-group">
+                <span class="input-group-btn">
+                    <span class="btn btn-sm btn-default btn-file">
+                        Browse...
+                        <input type="file" />
+                    </span>
+                </span>
+            </div>
+
+        </div>
+    </div>
+
 
     <div class="page-header">
         <h1>Tables</h1>
